--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,21 @@
+name: Deploy website on push
 
+on:
+  push:
+    branches: [main]
+
+jobs:
+  web-deploy:
+    name: Deploy
+    runs-on: windows-latest
+    steps:
+      - name: Get latest code
+        uses: appleboy/ssh-action@master
+        with:
+          host: 172.105.127.109
+          username: ${{ secrets.ftp_username }}
+          password: ${{ secrets.ftp_password }}
+          script: |
+            cd public_html
+            git pull origin main
+            git status
