--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: 🚀 Deploy using Git and FTP
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: 172.105.127.109
+        server: thewall.host4india.in
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
         script: |
